# EnglishLearningApp

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  PracticeWindow.cpp  PracticeWindow.h  README.md  dictionary.json  difficultywindow.cpp  difficultywindow.h  gamewindow.cpp  gamewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build.yml
android/assets/resources/: resources.qrc
include/: DifficultyWindow.h  GameWindow.h  MainWindow.h  MemoryGame.h  PracticeWindow.h  StatsTableWidget.h  UserNameDialog.h
resources/: dictionary_level1_enhanced.json  dictionary_level2_enhanced.json  dictionary_level3_enhanced.json  dictionary_level4_enhanced.json  dictionary_level5_enhanced.json  resources.qrc
src/: DifficultyWindow.cpp  GameWindow.cpp  MainWindow.cpp  MemoryGame.cpp  PracticeWindow.cpp  StatsTableWidget.cpp  UserNameDialog.cpp
